--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
   <color name="iconBackground">#000</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#000</color>
+  <color name="light10">#D7D3C6</color>
 </resources>
