--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="android:statusBarColor">#000</item>
     <item name="android:scrollbarThumbVertical">@color/light10</item>
+    <item name="android:scrollbarThumbHorizontal">@color/light10</item>
   </style>
   <style name="ResetEditText" parent="@android:style/Widget.EditText">
     <item name="android:padding">0dp</item>
