--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#000</color>
   <color name="light10">#D7D3C6</color>
+  <color name="dark10">#B0B4B1</color>
 </resources>
