--- a/android/app/src/main/res/xml/network_security_configuration.xml
+++ b/android/app/src/main/res/xml/network_security_configuration.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <base-config>
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
             <certificates src="@raw/isrgrootx1" />
             <certificates src="@raw/isrgrootx2" />
