--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="android:scrollbarThumbVertical">@color/dark10</item>
     <item name="android:scrollbarThumbHorizontal">@color/dark10</item>
-    <item name="android:windowLightStatusBar">true</item>
+    <item name="android:windowLightStatusBar">false</item>
   </style>
   <style name="ResetEditText" parent="@android:style/Widget.EditText">
     <item name="android:padding">0dp</item>
